kubernetes/kstore-k8s/kstore-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kstore
  namespace: khipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kstore
      version: 'v1'
  template:
    metadata:
      labels:
        app: kstore
        version: 'v1'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - kstore
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: kstore-app
          image: sendilkumarn/kstore
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
