kubernetes/kstore-k8s/kstore-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kstore
  namespace: khipster
  labels:
    app: kstore
spec:
  selector:
    app: kstore
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
