kubernetes/kstore-k8s/kstore-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kstore-virtualservice
  namespace: khipster
spec:
  hosts:
    - kstore
  http:
    - route:
        - destination:
            host: kstore
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
